Fix double-scrollbar on actor sheet.

--- a/less/v2/actors.less
+++ b/less/v2/actors.less
@@ -200,7 +200,7 @@
     .main-content {
       /* Tabbed Content */
       .tab-body {
-        overflow-x: hidden;
+        overflow: hidden;
         .tab:not(.active) { display: none; }
       }
     }
